# nika

./: .env.example  .gitignore  .nika-rust.toml  .yamllint.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SPEC.md  fix_runner.sh  release-plz.toml  spec
.claude/: .nika-status  (+1 more)
tools/nika/: .gitignore  .yamllint.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml
tools/nika/.claude/: settings.json
tools/nika/.claude/rules/: error-handling.md  testing.md
tools/nika/.config/: nextest.toml
tools/nika/.github/workflows/: chat-ux.yml  ci.yml  codeql.yml  release.yml
tools/nika/benches/: binding_resolution.rs  dag_validation.rs  resilience.rs  task_execution.rs  workflow_parsing.rs
tools/nika/config/: mcp-servers.yaml
tools/nika/docs/: BOOK.md
tools/nika/docs/plans/: 2026-02-18-mvp4-real-integration.md  2026-02-18-quality-gaps-plan.md  2026-02-18-remaining-gaps-plan.md  2026-02-20-chat-agent-interface.md  2026-02-20-chat-ux-enrichment.md  2026-02-20-ci-cd-enhancement-plan.md  2026-02-20-comprehensive-testing.md  2026-02-20-dag-ascii-visualizer.md  2026-02-20-nika-studio-4-views.md  2026-02-20-nika-studio-tui-design.md  2026-02-20-tui-enhancements.md  2026-02-21-cleanup-dx-plan.md  2026-02-21-completion-plan.md  2026-02-21-comprehensive-audit.md  2026-02-21-priority1-fixes.md  2026-02-21-roadmap-v053-v07.md  2026-02-21-test-coverage-gaps.md  2026-02-21-test-infra-improvements.md  2026-02-21-token-mcp-provider-features.md  2026-02-21-tui-completion-audit.md  2026-02-21-tui-input-improvement-plan.md  2026-02-21-tui-observability-plan.md  SPAWN_BACKGROUND_IMPLEMENTATION.md  TUI_AUDIT_FIXES_PLAN.md  tui-gap-remediation-v2.md
tools/nika/docs/research/: 2026-02-21-crate-alternatives.md
tools/nika/examples/: README.md  agent-novanet.nika.yaml  agent-novanet.yaml  agent-simple.yaml  brainstorm-agent.nika.yaml  browser-automation.nika.yaml  claude-test.nika.yaml  demo.sh  invoke-novanet.nika.yaml  invoke-novanet.yaml  production-test-suite.nika.yaml  production-test.nika.yaml  research-agent.nika.yaml  schema-check.nika.yaml  sequential-thinking.nika.yaml  skill-brainstorm-quick.nika.yaml  skill-code-review.nika.yaml  skill-debugging.nika.yaml  skill-tdd.nika.yaml  test-agent-stop-conditions.nika.yaml  test-chat-ux-integration.nika.yaml  test-claude-provider.nika.yaml  test-context-propagation.nika.yaml  test-conversational-agent.nika.yaml  test-dag-complex-dependencies.nika.yaml  test-deep-context-chain.nika.yaml  test-extended-thinking.nika.yaml  test-full-integration.nika.yaml  test-multi-mcp-agent.nika.yaml  test-novanet-mcp.nika.yaml  test-openai-provider.nika.yaml  test-parallel-stress.nika.yaml  test-perplexity-mcp.nika.yaml  test-qrcode-ai-content-gen.nika.yaml  test-real-claude.nika.yaml  test-research-with-perplexity.nika.yaml  test-socratic-questioning.nika.yaml  test-user-journey-api-etl.nika.yaml  test-user-journey-blog-pipeline.nika.yaml  test-user-journey-code-gen.nika.yaml  (+37 more)
tools/nika/schemas/: nika-workflow.schema.json
tools/nika/src/: config.rs  error.rs  lib.rs  main.rs  test_fixtures.rs  test_utils.rs
tools/nika/src/ast/: action.rs  agent.rs  decompose.rs  invoke.rs  mod.rs  output.rs  schema_validator.rs  workflow.rs
tools/nika/src/binding/: entry.rs  mod.rs  resolve.rs  template.rs
tools/nika/src/dag/: flow.rs  mod.rs  validate.rs
tools/nika/src/event/: emitter.rs  log.rs  mod.rs  trace.rs
tools/nika/src/mcp/: client.rs  mod.rs  protocol.rs  rmcp_adapter.rs  transport.rs  types.rs
tools/nika/src/provider/: claude.rs  mod.rs  openai.rs  rig.rs  types.rs
tools/nika/src/resilience/: circuit_breaker.rs  metrics.rs  mod.rs  provider.rs  rate_limiter.rs  retry.rs
tools/nika/src/runtime/: agent_loop.rs  decomposer.rs  executor.rs  mod.rs  output.rs  rig_agent_loop.rs  runner.rs  spawn.rs
tools/nika/src/store/: datastore.rs
tools/nika/src/tools/: context.rs  edit.rs  glob.rs  grep.rs  mod.rs  read.rs  rig_adapter.rs  write.rs
tools/nika/src/tui/: app.rs  cache.rs  chat_agent.rs  command.rs  event.rs  file_resolve.rs  focus.rs  keybindings.rs  layout.rs  mod.rs  mode.rs  standalone.rs  state.rs  theme.rs  ui.rs  unicode.rs  utils.rs  watcher.rs
tools/nika/src/util/: constants.rs  interner.rs  jsonpath.rs  mod.rs
tools/nika/tests/: agent_edge_cases_test.rs  agent_loop_test.rs  agent_parse_test.rs  binding_integration.rs  chat_agent_integration.rs  chat_continuation_test.rs  chat_socratic_tests.rs  chat_ux_test.rs  claude_chat_test.rs  conversational_agent_test.rs  dag_test.rs  decompose_test.rs  executor_fetch_errors_test.rs  executor_infer_errors_test.rs  fetch_wiremock_test.rs  for_each_test.rs  integration.rs  invoke_execution_test.rs  invoke_parse_test.rs  lazy_binding_edge_cases_test.rs  lazy_binding_test.rs  mcp_client_test.rs  mcp_concurrent_test.rs  mcp_events_test.rs  mcp_integration_test.rs  mcp_protocol_test.rs  mcp_race_conditions_test.rs  mcp_real_output_test.rs  mcp_transport_test.rs  production_verification_test.rs  proptest_fuzzing.proptest-regressions  proptest_fuzzing.rs  provider_integration_test.rs  real_integration_test.rs  reasoning_capture_test.rs  resilience_test.rs  rig_agent_loop_test.rs  rig_integration_test.rs  rig_provider_methods_test.rs  rig_provider_selection_test.rs  (+13 more)
tools/nika/tests/common/: fixtures.rs  mod.rs
tools/nika/tests/integration/: e2e_workflow_test.rs  helpers.rs  invoke_workflow.rs  mod.rs  novanet_test.rs
tools/nika/tests/snapshots/: tui_render_snapshot_test__agent_turns_completed.snap  tui_render_snapshot_test__agent_turns_empty.snap  tui_render_snapshot_test__agent_turns_error_state.snap  tui_render_snapshot_test__agent_turns_many_turns.snap  tui_render_snapshot_test__agent_turns_reversed.snap  tui_render_snapshot_test__agent_turns_single_thinking.snap  tui_render_snapshot_test__agent_turns_tool_sequence.snap  tui_render_snapshot_test__composite_agent_panel_elements.snap  tui_render_snapshot_test__composite_mission_panel_elements.snap  tui_render_snapshot_test__composite_novanet_panel_elements.snap  tui_render_snapshot_test__gauge_80x24.snap  (+32 more)
(+236 files in other folders)
