[package]
name = "nika"
version = "0.1.0"
edition = "2021"
authors = ["SuperNovae Studio"]
description = "CLI for Nika workflow orchestration"
license = "LicenseRef-Proprietary"
repository = "https://github.com/supernovae-studio/nika-cli"
keywords = ["ai", "workflow", "claude", "orchestration", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "nika"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }

# TUI (Ratatui)
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
once_cell = "1.19"
colored = "2.1"
walkdir = "2.5"
wait-timeout = "0.2"

# HTTP client for API providers
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"

# MCP SDK (Model Context Protocol)
rmcp = { version = "0.12", features = ["client", "transport-child-process"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
