[package]
name = "nika"
version = "0.1.0"
edition = "2021"
description = "DAG workflow runner for AI tasks"
license = "MIT"

[[bin]]
name = "nika"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "process", "sync", "time", "fs"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.9"
serde_json = "1.0"

# JSON Schema validation
jsonschema = "0.26"

# Errors
anyhow = "1.0"
thiserror = "1.0"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Utilities
regex = "1.11"
colored = "2.1"
dotenvy = "0.15"
dashmap = "6.1"
parking_lot = "0.12"  # 2-3x faster RwLock
smallvec = "1.13"     # Stack-allocated small vectors
rustc-hash = "2.1"    # FxHashMap - faster hashing for small keys

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.14"
