[package]
name = "nika"
version = "0.2.0"
edition = "2021"
description = "DAG workflow runner for AI tasks with MCP integration"
license = "AGPL-3.0-or-later"
rust-version = "1.82"

[[bin]]
name = "nika"
path = "src/main.rs"

[features]
default = ["tui", "mcp"]
tui = ["dep:ratatui", "dep:crossterm"]
mcp = []  # MCP types are always compiled, feature gates future optional deps
integration = []  # Enable integration tests with real MCP servers

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "process", "sync", "time", "fs"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.9"
serde_json = "1.0"

# JSON Schema validation
jsonschema = "0.26"

# Errors
anyhow = "1.0"
thiserror = "1.0"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Utilities
bytes = "1.11.1"  # Force upgrade to fix RUSTSEC-2026-0007
regex = "1.11"
colored = "2.1"
dotenvy = "0.15"
dashmap = "6.1"
parking_lot = "0.12"
scopeguard = "1.2"
smallvec = "1.13"
rustc-hash = "2.1"
uuid = { version = "1.0", features = ["v4"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
chrono = "0.4"
rand = "0.8"

# MCP (NEW v0.2)
rmcp = { version = "0.1", features = ["client", "transport-io"], optional = true }

# TUI (feature-gated)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.14"
proptest = "1.4"
insta = { version = "1.34", features = ["yaml"] }
pretty_assertions = "1.4"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "resilience"
harness = false
