[package]
name = "nika"
version = "0.6.0"
edition = "2021"
description = "DAG workflow runner for AI tasks with MCP integration"
license = "AGPL-3.0-or-later"
rust-version = "1.86"

[[bin]]
name = "nika"
path = "src/main.rs"

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm", "dep:tui-textarea", "dep:tui-input", "dep:arboard", "dep:notify", "dep:nucleo"]
integration = []  # Enable integration tests with real MCP servers
test-fixtures = []  # Export test_fixtures module for external test crates

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "process", "sync", "time", "fs"] }
tokio-util = "0.7"  # CancellationToken for workflow abort
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"

# JSON Schema validation
jsonschema = "0.26"

# Errors
thiserror = "1.0"
miette = { version = "7.6", features = ["fancy"] }

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Utilities
bytes = "1.11.1"  # Force upgrade to fix RUSTSEC-2026-0007
regex = "1.11"
colored = "2.1"
dotenvy = "0.15"
dashmap = "6.1"
parking_lot = "0.12"
smallvec = "1.13"
rustc-hash = "2.1"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
chrono = "0.4"
rand = "0.8"

# File System - production-grade crates
camino = "1.1"     # UTF-8 safe paths (Utf8PathBuf) - no OsStr panics
ignore = "0.4"     # .gitignore/.ignore support (from ripgrep author)
globset = "0.4"    # Fast glob pattern matching (from ripgrep author)

# MCP - Anthropic's official Rust SDK
# See docs/research/2026-02-19-mcp-rust-crates.md for crate comparison
rmcp = { version = "0.16", features = ["client", "transport-child-process"] }

# LLM Agent Framework - replaces custom provider implementation
# Native rmcp integration via .rmcp_tools() method
rig-core = { version = "0.31", features = ["rmcp"] }

# TUI (feature-gated)
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
tui-textarea = { version = "0.7", optional = true }  # YAML editor
tui-input = { version = "0.11", features = ["crossterm"], optional = true }  # Chat input
arboard = { version = "3.4", optional = true }  # Clipboard support
notify = { version = "8", optional = true }  # File watching for auto-refresh
nucleo = { version = "0.5", optional = true }  # Fuzzy file search (Helix quality)

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = { version = "0.3.32", default-features = false, features = ["alloc"] }

[dev-dependencies]
tempfile = "3.14"
proptest = "1.4"
insta = { version = "1.34", features = ["yaml"] }
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }
serial_test = "3.1"
wiremock = "0.6"

# Self-dependency to enable test-fixtures feature for integration tests
[dev-dependencies.nika]
path = "."
features = ["test-fixtures"]

# ═══════════════════════════════════════════════════════════════════════════
# BENCHMARKS - Run with: cargo bench
# ═══════════════════════════════════════════════════════════════════════════

[[bench]]
name = "workflow_parsing"
harness = false

[[bench]]
name = "dag_validation"
harness = false

[[bench]]
name = "binding_resolution"
harness = false

[[bench]]
name = "task_execution"
harness = false
